# optspp

./: .gitmodules  README.md
include/optspp/: optspp
src/: declaration.hpp  definitions.hpp  exception.hpp  exception_impl.hpp  misc.hpp  option.hpp  options.hpp  parse.hpp  parser.hpp  predeclare.hpp  properties.hpp  scheme.hpp
src.old/: option.hpp  options.hpp  parser.hpp  properties.hpp  scheme.hpp
src.old/parser/: parser.hpp  separation.hpp
src.old/scheme/: arguments.hpp  attributes.hpp  operations.hpp  properties.hpp  validate.hpp
src/parser/: parser.hpp  token.hpp
src/scheme/: arguments.hpp  attributes.hpp  base.hpp  definition.hpp  description.hpp  descriptor.hpp  entity.hpp  name.hpp  node.hpp  operations.hpp  properties.hpp  tree.hpp  value.hpp
test/: CMakeLists.txt  optspp.cpp
